--- a/src/templates/auth_form.html
+++ b/src/templates/auth_form.html
@@ -1,5 +1,8 @@
 <form id="auth-form" hx-target="#auth-form" hx-post="/auth/sign-in" hx-swap="outerHTML 100ms">
-  <!-- { auth_form.csrf_token }} -->
+  {{ auth_form.csrf_token }}
+  {% with errors=auth_form.csrf_token.errors %}
+    {% include "form_errors.html" %}
+  {% endwith %}
   <input type="hidden" name="next" value="{{ request.args.get('next', '') }}"/>
   <div class="row">
     <div class="twelve columns">
