--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -29,7 +29,7 @@
     <link rel="stylesheet" href="/static/css/stylesheet.css">
     <link rel="stylesheet" href="/static/css/skeleton.css">
   </head>
-  <body hx-headers='{"X-CSRFToken": "{{ csrf_token() }}"}'>
+  <body hx-headers='{"X-CSRFToken": "{{ csrf_token() }}"}' hx-trigger="refreshCSRF" hx-swap="outerHTML">
     <header>
       {% block header %}{% endblock header %}
       <nav>
